bk_ida/gccida/c0/count_pseudo
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/count_pseudo/src/reload1.c:2069:15: error: use of undeclared identifier 'off_88ECD0'
fancy_abort( &off_88ECD0[4], 1599, "count_pseudo"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/count_pseudo/src/reload1.c:2106:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cfun->emit->x_regno_reg_rtx[reg])] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/count_pseudo/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/count_pseudo/src/reload1.c:2107:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cfun->emit->x_regno_reg_rtx[reg])] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/count_pseudo/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/count_pseudo/src/obj/reload1.o] Error 1
